[package]
name = "gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = [ "derive" ]}
crossterm = "0.24.0"
env_logger = "0.9.0"
fixedbitset = "0.4.2"
piston_window = "0.124.0"
rand = "0.8.5"

# Rip compile time
[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
